feat: Skills dependencies
